naive/compile.log
make -C /lib/modules/6.8.0-90-generic/build M=/home/dennis/filesystem_lab/naive modules
make[1]: Entering directory '/usr/src/linux-headers-6.8.0-90-generic'
warning: the compiler differs from the one used to build the kernel
  The kernel was built by: x86_64-linux-gnu-gcc-12 (Ubuntu 12.3.0-1ubuntu1~22.04.2) 12.3.0
  You are using:           gcc-12 (Ubuntu 12.3.0-1ubuntu1~22.04.2) 12.3.0
  CC [M]  /home/dennis/filesystem_lab/naive/naivefs_main.o
/home/dennis/filesystem_lab/naive/naivefs_main.c:21:19: error: initialization of ‘struct dentry * (*)(struct inode *, struct dentry *, unsigned int)’ from incompatible pointer type ‘int (*)(struct inode *, struct dentry *, unsigned int)’ [-Werror=incompatible-pointer-types]
   21 |     .lookup     = naive_lookup,
      |                   ^~~~~~~~~~~~
/home/dennis/filesystem_lab/naive/naivefs_main.c:21:19: note: (near initialization for ‘naive_dir_iops.lookup’)
cc1: some warnings being treated as errors
make[3]: *** [scripts/Makefile.build:243: /home/dennis/filesystem_lab/naive/naivefs_main.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.8.0-90-generic/Makefile:1927: /home/dennis/filesystem_lab/naive] Error 2
make[1]: *** [Makefile:240: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.8.0-90-generic'
make: *** [Makefile:8: all] Error 2
